ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__session_end_hook_activity.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before reveal:\\n{hidden}\\nrunning:\\n{running}\\ncompleted:\\n{}\",\nhook_status_frame(&chat, 80),)"
---
before reveal:
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
running:
"                                                                                "
"• Saving session summary                                                        "
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
completed:
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
